--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -11,16 +11,6 @@
         tools:context=".CreateActivity">
 
         <Button
-            android:id="@+id/buttonvoltar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Voltar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/buttoncadastrar"
-            app:layout_constraintStart_toStartOf="@+id/buttoncadastrar"
-            app:layout_constraintTop_toBottomOf="@+id/buttoncadastrar" />
-
-        <Button
             android:id="@+id/buttoncadastrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,8 +36,8 @@
 
         <EditText
             android:id="@+id/DescricaoeditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="307dp"
+            android:layout_height="53dp"
             android:ems="10"
             android:inputType="text"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -59,8 +49,8 @@
 
         <EditText
             android:id="@+id/senhaeditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="319dp"
+            android:layout_height="61dp"
             android:layout_marginTop="4dp"
             android:ems="10"
             android:inputType="text"
